--- a/Portfolio/src/main/webapp/portfolio/portfolio.html
+++ b/Portfolio/src/main/webapp/portfolio/portfolio.html
@@ -4,9 +4,19 @@
    <meta charset="UTF-8">
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>Document</title>
+   <title>YOU+ME</title>
+   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-   
+   <div class="wrap">
+      <header>
+         <div class innerHeader>
+            <h1 class="logo"><a href="#">
+               <img src="img/logo.png" alt="">
+               <img src="img/logo2.png" alt="">
+            </a></h1>
+         </div>
+      </header>
+   </div>
 </body>
 </html>
