--- a/Portfolio/src/main/webapp/portfolio/portfolio.html
+++ b/Portfolio/src/main/webapp/portfolio/portfolio.html
@@ -10,11 +10,17 @@
 <body>
    <div class="wrap">
       <header>
-         <div class innerHeader>
+         <div class="innerHeader">
             <h1 class="logo"><a href="#">
-               <img src="img/logo.png" alt="">
-               <img src="img/logo2.png" alt="">
+               <img src="img/logo1.png" alt="로고1">
+               <img src="img/logo2.png" alt="로고2">
             </a></h1>
+            <ul class="menu">
+               <li><a href="#">HOME</a></li>
+               <li><a href="#">ABOUT</a></li>
+               <li><a href="#">PRODUCT</a></li>
+               <li><a href="#">CONTACT</a></li>
+            </ul>
          </div>
       </header>
    </div>
