--- a/Portfolio/src/main/webapp/portfolio/portfolio.html
+++ b/Portfolio/src/main/webapp/portfolio/portfolio.html
@@ -18,7 +18,8 @@
             <ul class="menu">
                <li><a href="#">HOME</a></li>
                <li><a href="#">ABOUT</a></li>
-               <li><a href="#">PRODUCT</a></li>
+               <li><a href="#">SKILLS</a></li>
+               <li><a href="#">PROJECT</a></li>
                <li><a href="#">CONTACT</a></li>
             </ul>
          </div>
