--- a/Portfolio/src/main/webapp/portfolio/tmp.html
+++ b/Portfolio/src/main/webapp/portfolio/tmp.html
@@ -1,17 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <head>
-   <meta charset="UTF-8">
-   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>YOU+ME</title>
-   <link rel="stylesheet" href="css/style.css">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>대방</title>
+    <link rel="stylesheet" href="css/tmp.css">
+    <script src="js/jquery-3.3.1.min.js"></script>
+    <script src="js/script.js"></script>
 </head>
 <body>
-   <div class="wrap">
-      <header>
+    <div class="wrap">
+        <header>
          <div class="innerHeader">
-            <h1 class="logo"><a href="#">
+            <h1 class="logo"><a href="portfolio.html">
                <img src="img/logo1.png" alt="로고1">
                <img src="img/logo2.png" alt="로고2">
             </a></h1>
@@ -23,7 +25,7 @@
                <li><a href="#">CONTACT</a></li>
             </ul>
          </div>
-      </header>
-   </div>
+        </header>
+    </div>
 </body>
 </html>
