--- a/Portfolio/src/main/webapp/portfolio/main.html
+++ b/Portfolio/src/main/webapp/portfolio/main.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <head>
    <meta charset="UTF-8">
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>YOU+ME</title>
    <link rel="stylesheet" href="css/style.css">
-   <script src="js/script.js"></script>
    <script src="js/jquery-3.3.1.min.js"></script>
+   <script src="js/script.js"></script>
 </head>
 <body>
    <div class="wrap">
