--- a/Portfolio/src/main/webapp/portfolio/tmp.html
+++ b/Portfolio/src/main/webapp/portfolio/tmp.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>대방</title>
-    <link rel="stylesheet" href="css/tmp.css">
+    <link rel="stylesheet" href="css/style.css">
     <script src="js/jquery-3.3.1.min.js"></script>
     <script src="js/script.js"></script>
 </head>
