--- a/temp.html
+++ b/temp.html
@@ -5,7 +5,7 @@
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>YOU+ME</title>
-   <link rel="stylesheet" href="css/style.css">
+   <link rel="stylesheet" href="css/temp.css">
    <link rel="stylesheet" href="css/slick.css">
    <script src="js/jquery-3.3.1.min.js"></script>
    <script src="js/script.js"></script>
@@ -28,7 +28,7 @@
             </ul>
          </div>
       </header>
-      <section class="main">
+      <section class="visual">
          <ul class="slide">
             <li>
                <img src="img/main1.jpg" alt="메인1">
