Add project section

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
    <title>YOU+ME</title>
    <link rel="stylesheet" href="css/style.css">
    <link rel="stylesheet" href="css/slick.css">
+   <link rel="stylesheet" href="https://cdn.linearicons.com/free/1.0.0/icon-font.min.css">
    <script src="js/jquery-3.3.1.min.js"></script>
    <script src="js/script.js"></script>
    <script src="js/slick.min.js"></script>
@@ -23,7 +24,7 @@
                <li><a href="#">HOME</a></li>
                <li><a href="#">ABOUT</a></li>
                <li><a href="#">SKILLS</a></li>
-               <li><a href="#">PROJECT</a></li>
+               <li><a href="#project">PROJECT</a></li>
                <li><a href="#">CONTACT</a></li>
             </ul>
          </div>
@@ -34,27 +35,54 @@
                <img src="img/main1.jpg" alt="메인1">
                <div class="txt">
                   <p>Web Developer</p>
-                  <h2>시도를 성공으로<br>이끌겠습니다.</h2>
+                  <h2><span>시도</span>를 성공으로<br>이끌겠습니다.</h2>
                </div>
             </li>
             <li>
                <img src="img/main2.jpg" alt="메인2">
                <div class="txt">
                   <p>Web Developer</p>
-                  <h2>꾸준함으로 탁월함을<br>앞서겠습니다.</h2>
+                  <h2><span>꾸준함</span>으로 탁월함을<br>앞서겠습니다.</h2>
                </div>
             </li>
             <li>
                <img src="img/main3.jpg" alt="메인3">
                <div class="txt">
                   <p>Web Developer</p>
-                  <h2>이유가 있는 코드를<br>작성하겠습니다.</h2>
+                  <h2><span>이유</span>가 있는 코드를<br>작성하겠습니다.</h2>
                </div>
             </li>
          </ul>
       </section>
-      <section class="about">
-         <div>about</div>
+      <section class="project">
+         <a id="project"></a>
+         <div class="title">
+            <h2>PROJECT<span>.</span></h2>
+            <!-- <p>이미지를 누르면 프로젝트 설명으로 이동합니다.</p> -->
+         </div>
+         <ul>
+            <li><a href="https://github.com/umingming/DragonLand"><p class="img"><img src="img/project1.png" alt="용용랜드"></p>
+               <div class="content">
+                  <p class="color">용용랜드</p>
+                  <p>자바 콘솔 기반의 놀이공원 예매 및 관리 시스템</p>
+                  <p class="date"><span class="lnr lnr-calendar-full"></span>2021.10.22-2021.11.02</p>
+               </div>
+            </a></li>
+            <li><a href="https://github.com/umingming/DragonCenter"><p class="img"><img src="img/project2.png" alt="교육센터"></p>
+               <div class="content">
+                  <p class="color">쌍용 교육 센터</p>
+                  <p>교육 센터 운영에 필요한 데이터베이스 구축</p>
+                  <p class="date"><span class="lnr lnr-calendar-full"></span>2021.11.29-2021.12.05</p>
+               </div>
+            </a></li>
+            <li><a href="https://github.com/umingming/DeepRoot"><p class="img"><img src="img/project3.png" alt="뿌리깊은국사"></p>
+               <div class="content">
+                  <p class="color">뿌리 깊은 국사</p>
+                  <p> Java 콘솔로 구현한 한국사 학습 프로그램</p>
+                  <p class="date"><span class="lnr lnr-calendar-full"></span>2021.12.20-2021.12.31</p>
+               </div>
+            </a></li>
+         </ul>
       </section>
    </div>
 </body>
