--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             <li><a href="https://github.com/umingming/DragonLand"><p class="img"><img src="img/project1.png" alt="용용랜드"></p>
                <div class="content">
                   <p class="color">용용랜드</p>
-                  <p>자바 콘솔 기반의 놀이공원 예매 및 관리 시스템</p>
+                  <p>자바 기반의 놀이공원 예매 및 관리 시스템</p>
                   <p class="date"><span class="lnr lnr-calendar-full"></span>2021.10.22-2021.11.02</p>
                </div>
             </a></li>
