Update project txt

--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
                <img src="img/main1.jpg" alt="메인1">
                <div class="txt">
                   <p>Web Developer</p>
-                  <h2><span>시도</span>를 성공으로<br>이끌겠습니다.</h2>
+                  <h2><span>시도</span>를 <span>성공</span>으로<br>이끌겠습니다.</h2>
+                  <!-- <h2><span>시도</span>를 <span>성공</span>으로<br>이끄는 <span>개발자</span></h2> -->
                </div>
             </li>
             <li>
@@ -43,13 +44,15 @@
                <div class="txt">
                   <p>Web Developer</p>
                   <h2><span>꾸준함</span>으로 탁월함을<br>앞서겠습니다.</h2>
+                  <!-- <h2><span>꾸준함</span>으로 탁월함을<br>앞서는 <span>개발자</span></h2> -->
                </div>
             </li>
             <li>
                <img src="img/main3.jpg" alt="메인3">
                <div class="txt">
                   <p>Web Developer</p>
-                  <h2><span>이유</span>가 있는 코드를<br>작성하겠습니다.</h2>
+                  <h2><span>이유</span>가 있는 <span>코드</span>를<br>작성하겠습니다.</h2>
+                  <!-- <h2><span>이유</span>가 있는 <span>코드</span>를<br>작성하는 <span>개발자</span></h2> -->
                </div>
             </li>
          </ul>
@@ -57,14 +60,14 @@
       <section class="project">
          <a id="project"></a>
          <div class="title">
-            <h2>PROJECT<span>.</span></h2>
+            <h2>MY PROJECT<span>.</span></h2>
             <!-- <p>이미지를 누르면 프로젝트 설명으로 이동합니다.</p> -->
          </div>
          <ul>
             <li><a href="https://github.com/umingming/DragonLand"><p class="img"><img src="img/project1.png" alt="용용랜드"></p>
                <div class="content">
                   <p class="color">용용랜드</p>
-                  <p>자바 기반의 놀이공원 예매 및 관리 시스템</p>
+                  <p>JAVA 기반의 놀이공원 예매 및 관리 시스템</p>
                   <p class="date"><span class="lnr lnr-calendar-full"></span>2021.10.22-2021.11.02</p>
                </div>
             </a></li>
@@ -78,7 +81,7 @@
             <li><a href="https://github.com/umingming/DeepRoot"><p class="img"><img src="img/project3.png" alt="뿌리깊은국사"></p>
                <div class="content">
                   <p class="color">뿌리 깊은 국사</p>
-                  <p> Java 콘솔로 구현한 한국사 학습 프로그램</p>
+                  <p> 자바 콘솔로 구현한 한국사 학습 프로그램</p>
                   <p class="date"><span class="lnr lnr-calendar-full"></span>2021.12.20-2021.12.31</p>
                </div>
             </a></li>
