Update main txt

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
    <script src="js/jquery-3.3.1.min.js"></script>
    <script src="js/script.js"></script>
    <script src="js/slick.min.js"></script>
+   <script src="js/scrolla.jquery.min.js"></script>
 </head>
 <body>
    <div class="wrap">
@@ -21,38 +22,37 @@
                <img src="img/logo2.png" alt="로고2">
             </a></h1>
             <ul class="menu">
-               <li><a href="#">HOME</a></li>
-               <li><a href="#">ABOUT</a></li>
-               <li><a href="#">SKILLS</a></li>
-               <li><a href="#project">PROJECT</a></li>
-               <li><a href="#">CONTACT</a></li>
+               <li id="btnHome"><a href="#">HOME</a></li>
+               <li id="btnAbout"><a href="#">ABOUT</a></li>
+               <li id="btnSkill"><a href="#">SKILLS</a></li>
+               <li id="btnProject"><a href="#">PROJECT</a></li>
+               <li id="btnContact"><a href="#">CONTACT</a></li>
             </ul>
          </div>
       </header>
       <section class="main">
          <ul class="slide">
             <li>
-               <img src="img/main1.jpg" alt="메인1">
+               <img src="img/main0.jpg" alt="메인1">
+               <div id="hello"></div>
                <div class="txt">
                   <p>Web Developer</p>
-                  <h2><span>시도</span>를 <span>성공</span>으로<br>이끌겠습니다.</h2>
-                  <!-- <h2><span>시도</span>를 <span>성공</span>으로<br>이끄는 <span>개발자</span></h2> -->
+                  <h2>안녕하세요,<br> <span>이유미</span>입니다!</h2>
+                  <!-- <h2><span>시도</span>를 <span>성공</span>으로<br>이끌겠습니다.</h2> -->
                </div>
             </li>
             <li>
                <img src="img/main2.jpg" alt="메인2">
                <div class="txt">
-                  <p>Web Developer</p>
+                  <p>untiring effort</p>
                   <h2><span>꾸준함</span>으로 탁월함을<br>앞서겠습니다.</h2>
-                  <!-- <h2><span>꾸준함</span>으로 탁월함을<br>앞서는 <span>개발자</span></h2> -->
                </div>
             </li>
             <li>
                <img src="img/main3.jpg" alt="메인3">
                <div class="txt">
-                  <p>Web Developer</p>
+                  <p>With a reason</p>
                   <h2><span>이유</span>가 있는 <span>코드</span>를<br>작성하겠습니다.</h2>
-                  <!-- <h2><span>이유</span>가 있는 <span>코드</span>를<br>작성하는 <span>개발자</span></h2> -->
                </div>
             </li>
          </ul>
