Update img size

--- a/index.html
+++ b/index.html
@@ -34,7 +34,6 @@
          <ul class="slide">
             <li>
                <img src="img/main0.jpg" alt="메인1">
-               <div id="hello"></div>
                <div class="txt">
                   <p>Web Developer</p>
                   <h2>안녕하세요,<br> <span>이유미</span>입니다!</h2>
@@ -56,6 +55,11 @@
                </div>
             </li>
          </ul>
+      </section>
+      <section class="about">
+         <div class="scrollBox" id="scroll">
+
+         </div>
       </section>
       <section class="project">
          <a id="project"></a>
