--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
       <section class="main">
          <ul class="slide">
             <li>
-               <img src="img/main0.jpg" alt="메인1">
+               <img src="img/main0_scroll.jpg" alt="메인1">
+               <p id="btnScroll"><img src="img/scroll.png" alt="메인1"></p>
                <div class="txt">
                   <p>Web Developer</p>
                   <h2>안녕하세요,<br> <span>이유미</span>입니다!</h2>
@@ -57,7 +58,8 @@
          </ul>
       </section>
       <section class="about">
-         <div class="scrollBox" id="scroll">
+         <a id="about"></a>
+         <div class="title">
 
          </div>
       </section>
@@ -67,27 +69,33 @@
             <h2>MY PROJECT<span>.</span></h2>
             <!-- <p>이미지를 누르면 프로젝트 설명으로 이동합니다.</p> -->
          </div>
-         <ul>
+         <ul class="projectSlide">
             <li><a href="https://github.com/umingming/DragonLand"><p class="img"><img src="img/project1.png" alt="용용랜드"></p>
-               <div class="content">
+               <!-- <div class="content">
                   <p class="color">용용랜드</p>
                   <p>JAVA 기반의 놀이공원 예매 및 관리 시스템</p>
                   <p class="date"><span class="lnr lnr-calendar-full"></span>2021.10.22-2021.11.02</p>
-               </div>
+               </div> -->
             </a></li>
             <li><a href="https://github.com/umingming/DragonCenter"><p class="img"><img src="img/project2.png" alt="교육센터"></p>
-               <div class="content">
+               <!-- <div class="content">
                   <p class="color">쌍용 교육 센터</p>
                   <p>교육 센터 운영에 필요한 데이터베이스 구축</p>
                   <p class="date"><span class="lnr lnr-calendar-full"></span>2021.11.29-2021.12.05</p>
-               </div>
+               </div> -->
             </a></li>
             <li><a href="https://github.com/umingming/DeepRoot"><p class="img"><img src="img/project3.png" alt="뿌리깊은국사"></p>
-               <div class="content">
+               <!-- <div class="content">
                   <p class="color">뿌리 깊은 국사</p>
                   <p> 자바 콘솔로 구현한 한국사 학습 프로그램</p>
                   <p class="date"><span class="lnr lnr-calendar-full"></span>2021.12.20-2021.12.31</p>
-               </div>
+               </div> -->
+            </a></li>
+            <li><a href="https://github.com/umingming/Portfolio"><p class="img"><img src="img/project4.png" alt="포트폴리오"></p>
+            </a></li>
+            <li><a href="#!"><p class="img"><img src="img/projectTemp.png" alt=""></p>
+            </a></li>
+            <li><a href="#"><p class="img"><img src="img/projectTemp.png" alt=""></p>
             </a></li>
          </ul>
       </section>
