--- a/index.html
+++ b/index.html
@@ -60,7 +60,13 @@
       <section class="about">
          <a id="about"></a>
          <div class="title">
-
+            <h2>ABOUT ME<span>.</span></h2>
+         </div>
+      </section>
+      <section class="skill">
+         <a id="skill"></a>
+         <div class="title">
+            <h2>MY SKILLS<span>.</span></h2>
          </div>
       </section>
       <section class="project">
@@ -99,6 +105,19 @@
             </a></li>
          </ul>
       </section>
+      <section class="contact">
+         <a id="contact"></a>
+         <div class="title">
+            <h2>CONTACT ME<span>.</span></h2>
+         </div>
+      </section>
+      <footer>
+         <div class="innerFooter">
+            <ul>
+               <li></li>
+            </ul>
+         </div>
+      </footer>
    </div>
 </body>
 </html>
