Add skill section

--- a/index.html
+++ b/index.html
@@ -60,19 +60,63 @@
       <section class="about">
          <a id="about"></a>
          <div class="title">
-            <h2>ABOUT ME<span>.</span></h2>
+            <h2>ABOUT ME</h2>
          </div>
       </section>
       <section class="skill">
          <a id="skill"></a>
          <div class="title">
-            <h2>MY SKILLS<span>.</span></h2>
+            <h2>MY SKILLS</h2>
          </div>
+         <ul class="skills">
+            <li id="java">
+               <h3>Java</h3>
+               <div>
+                  <!-- <p>80%</p> -->
+                  <p>Java로 기본적인 알고리즘 구현이 가능합니다. 객체 지향 프로그래밍을 이해하고 있으며 프로그램에서 필요한 클래스를 설계할 수 있습니다. 컬렉션을 이용해 코드 관리를 할 수 있습니다. </p>
+               </div>
+            </li>
+            <li id="sql">
+               <h3>SQL</h3>
+               <div>
+                  <!-- <p>60%</p> -->
+                  <p>오라클로 관계형 데이터베이스를 관리할 수 있습니다. SQLD를 취득해 데이터 모델링과 SQL 기본 이론을 숙지했습니다.</p>
+               </div>
+            </li>
+            <li id="html">
+               <h3>HTML5</h3>
+               <div>
+                  <!-- <p>70%</p> -->
+                  <p>HTML5로 웹페이지 레이아웃을 제작한 경험이 있습니다. Inline과 Block 속성을 이해하고 알맞게 태그를 적용할 수 있습니다.</p>
+               </div>
+            </li>
+            <li id="css">
+               <h3>CSS3</h3>
+               <div>
+                  <!-- <p>50%</p> -->
+                  <p>다양한 CSS3의 속성을 이해하여 레이아웃 디자인을 적용합니다. 해상도에 따른 반응형 웹페이지를 제작할 수 있습니다.</p>
+               </div>
+            </li>
+            <li id="javaScript">
+               <h3>JavaScript</h3>
+               <div>
+                  <!-- <p>40%</p> -->
+                  <p>실제 웹페이지를 구현하며 JavaScript 기본 문법에 대해 공부하고 있습니다. 간단한 jquery를 사용할 수 있습니다. </p>
+               </div>
+            </li>
+            <li id="github">
+               <h3>GitHub</h3>
+               <div>
+                  <!-- <p>70%</p> -->
+                  <p>형상 관리의 중요성에 대해 인지하고 있으며 GitHub을 통해 협업을 진행한 경험이 있습니다. GitHub 서버로 웹페이지를 제작할 수 있습니다.</p>
+               </div>
+            </li>
+         </ul>
       </section>
       <section class="project">
          <a id="project"></a>
          <div class="title">
-            <h2>MY PROJECT<span>.</span></h2>
+            <h2>MY PROJECT</h2>
             <!-- <p>이미지를 누르면 프로젝트 설명으로 이동합니다.</p> -->
          </div>
          <ul class="projectSlide">
@@ -108,7 +152,7 @@
       <section class="contact">
          <a id="contact"></a>
          <div class="title">
-            <h2>CONTACT ME<span>.</span></h2>
+            <h2>CONTACT ME</h2>
          </div>
       </section>
       <footer>
