--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                <img src="img/logo1.png" alt="로고1">
                <img src="img/logo2.png" alt="로고2">
             </a></h1>
-            <ul class="menu">
+            <ul class="menu en">
                <li id="btnHome"><a href="#">HOME</a></li>
                <li id="btnAbout"><a href="#">ABOUT</a></li>
                <li id="btnSkill"><a href="#">SKILLS</a></li>
@@ -36,7 +36,7 @@
                <img src="img/main0_scroll.jpg" alt="메인1">
                <p id="btnScroll"><img src="img/scroll.png" alt="메인1"></p>
                <div class="txt">
-                  <p>Web Developer</p>
+                  <p class="en">Web Developer</p>
                   <h2>안녕하세요,<br> <span>이유미</span>입니다!</h2>
                   <!-- <h2><span>시도</span>를 <span>성공</span>으로<br>이끌겠습니다.</h2> -->
                </div>
@@ -44,14 +44,14 @@
             <li>
                <img src="img/main2.jpg" alt="메인2">
                <div class="txt">
-                  <p>untiring effort</p>
+                  <p class="en">untiring effort</p>
                   <h2><span>꾸준함</span>으로 탁월함을<br>앞서겠습니다.</h2>
                </div>
             </li>
             <li>
                <img src="img/main3.jpg" alt="메인3">
                <div class="txt">
-                  <p>With a reason</p>
+                  <p class="en">With a reason</p>
                   <h2><span>이유</span>가 있는 <span>코드</span>를<br>작성하겠습니다.</h2>
                </div>
             </li>
@@ -73,7 +73,7 @@
                <h3>Java</h3>
                <div>
                   <!-- <p>80%</p> -->
-                  <p>Java로 기본적인 알고리즘 구현이 가능합니다. 객체 지향 프로그래밍을 이해하고 있으며 프로그램에서 필요한 클래스를 설계할 수 있습니다. 컬렉션을 이용해 코드 관리를 할 수 있습니다. </p>
+                  <p>Java로 기본적인 알고리즘 구현이 가능합니다. 객체 지향 프로그래밍을 이해하고 있으며 프로그램에서 필요한 클래스를 설계할 수 있습니다. 프로젝트에서 컬렉션을 이용해 코드 관리를 한 경험이 있습니다. </p>
                </div>
             </li>
             <li id="sql">
@@ -101,7 +101,7 @@
                <h3>JavaScript</h3>
                <div>
                   <!-- <p>40%</p> -->
-                  <p>실제 웹페이지를 구현하며 JavaScript 기본 문법에 대해 공부하고 있습니다. 간단한 jquery를 사용할 수 있습니다. </p>
+                  <p>실제 웹페이지를 따라 구현하며 JavaScript 기본 문법에 대해 공부하고 있습니다. 간단한 jquery를 사용할 수 있습니다. </p>
                </div>
             </li>
             <li id="github">
