Add Contact section

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>YOU+ME</title>
    <link rel="stylesheet" href="css/style.css">
+   <link rel="stylesheet" href="css/animate.min.css">
    <link rel="stylesheet" href="css/slick.css">
    <link rel="stylesheet" href="https://cdn.linearicons.com/free/1.0.0/icon-font.min.css">
    <script src="js/jquery-3.3.1.min.js"></script>
@@ -63,7 +64,7 @@
             <h2>ABOUT ME</h2>
          </div>
       </section>
-      <section class="skill">
+      <section class="skill animate" data-animate="fadeInUp" data-duration="1s" data-delay="-0.3s">
          <a id="skill"></a>
          <div class="title">
             <h2>MY SKILLS</h2>
@@ -80,7 +81,7 @@
                <h3>SQL</h3>
                <div>
                   <!-- <p>60%</p> -->
-                  <p>오라클로 관계형 데이터베이스를 관리할 수 있습니다. SQLD를 취득해 데이터 모델링과 SQL 기본 이론을 숙지했습니다.</p>
+                  <p>오라클로 관계형 데이터베이스를 관리할 수 있습니다. SQLD를 취득하여 데이터 모델링과 SQL 기본 이론을 숙지했습니다.</p>
                </div>
             </li>
             <li id="html">
@@ -101,21 +102,21 @@
                <h3>JavaScript</h3>
                <div>
                   <!-- <p>40%</p> -->
-                  <p>실제 웹페이지를 따라 구현하며 JavaScript 기본 문법에 대해 공부하고 있습니다. 간단한 jquery를 사용할 수 있습니다. </p>
+                  <p>실제 웹페이지를 구현하며 JavaScript 기본 문법을 공부하고 있습니다. 간단한 jquery를 사용할 수 있습니다. </p>
                </div>
             </li>
             <li id="github">
                <h3>GitHub</h3>
                <div>
                   <!-- <p>70%</p> -->
-                  <p>형상 관리의 중요성에 대해 인지하고 있으며 GitHub을 통해 협업을 진행한 경험이 있습니다. GitHub 서버로 웹페이지를 제작할 수 있습니다.</p>
+                  <p>형상 관리의 중요성에 대해 인지하고 있으며 GitHub을 이용해 협업을 진행한 경험이 있습니다. GitHub 서버로 웹페이지를 제작할 수 있습니다.</p>
                </div>
             </li>
          </ul>
       </section>
       <section class="project">
          <a id="project"></a>
-         <div class="title">
+         <div class="title animate" data-animate="fadeInLeft" data-duration="2s" data-delay="-1s">
             <h2>MY PROJECT</h2>
             <!-- <p>이미지를 누르면 프로젝트 설명으로 이동합니다.</p> -->
          </div>
@@ -149,17 +150,19 @@
             </a></li>
          </ul>
       </section>
-      <section class="contact">
+      <section class="contact animate" data-animate="fadeInDown" data-duration="1s" data-delay="-0.2@s">
          <a id="contact"></a>
          <div class="title">
             <h2>CONTACT ME</h2>
          </div>
+         <ul>
+            <li><span class="lnr lnr-envelope"></span>010-5514-4506</p></li>
+            <li><span class="lnr lnr-phone-handset"></span>u_0112@naver.com</p></li>
+         </ul>
       </section>
       <footer>
          <div class="innerFooter">
-            <ul>
-               <li></li>
-            </ul>
+            <p>© Copyright 2022. All right reserved</p>
          </div>
       </footer>
    </div>
