--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             <h2>ABOUT ME</h2>
          </div>
       </section>
-      <section class="skill animate" data-animate="fadeInUp" data-duration="1s" data-delay="-0.3s">
+      <section class="skill animate" data-animate="fadeInUp" data-duration="1s" data-delay="-0.5s">
          <a id="skill"></a>
          <div class="title">
             <h2>MY SKILLS</h2>
@@ -102,7 +102,7 @@
                <h3>JavaScript</h3>
                <div>
                   <!-- <p>40%</p> -->
-                  <p>실제 웹페이지를 구현하며 JavaScript 기본 문법을 공부하고 있습니다. 간단한 jquery를 사용할 수 있습니다. </p>
+                  <p>실제 웹페이지를 똑같이 구현하며 JavaScript 기본 문법을 공부하고 있습니다. 간단한 jquery를 사용할 수 있습니다. </p>
                </div>
             </li>
             <li id="github">
