--- a/index.html
+++ b/index.html
@@ -63,6 +63,16 @@
          <div class="title">
             <h2>ABOUT ME</h2>
          </div>
+         <ul>
+            <li>
+               <p>꾸준함으로 탁월함을 앞서겠습니다.</p>
+               <p> 개발 공부를 시작한 이후 하루도 빠짐 없이 학습 내용을 노션에 기록하고 있습니다. 꾸준함은 시간과 노력이 쌓여 불변의 가치를 만들어준다고 생각합니다. 단순히 반복하는 일들을 가볍게 치부하지 않고 매사에 성실한 개발자가 되겠습니다.</p>
+            </li>
+            <li>
+               <p>이유 있는 코드를 작성하겠습니다.</p>
+               <p> 좋은 코드는 근거가 명확합니다. 작성한 코드에 대해 리뷰하여 좋은 코드를 사용하고자 노력하고 있습니다. 무작정 코드를 복사하는 기계가 아닌 각각의 이유를 깊게 생각하여 작성하는 개발자가 되겠습니다.</p>
+            </li>
+         </ul>
       </section>
       <section class="skill animate" data-animate="fadeInUp" data-duration="1s" data-delay="-0.5s">
          <a id="skill"></a>
