Update contact img

--- a/index.html
+++ b/index.html
@@ -179,8 +179,8 @@
             <h2>CONTACT ME</h2>
          </div>
          <ul>
-            <li><span class="lnr lnr-envelope"></span>010-5514-4506</p></li>
-            <li><span class="lnr lnr-phone-handset"></span>u_0112@naver.com</p></li>
+            <li><span class="lnr lnr-phone-handset"></span>010-5514-4506</p></li>
+            <li><span class="lnr lnr-envelope"></span>u_0112@naver.com</p></li>
          </ul>
       </section>
       <footer>
