Update project url

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                   <!-- <h2><span>시도</span>를 <span>성공</span>으로<br>이끌겠습니다.</h2> -->
                </div>
             </li>
-            <li>
+            <!-- <li>
                <img src="img/main2.jpg" alt="메인2">
                <div class="txt">
                   <p class="en">untiring effort</p>
@@ -55,7 +55,7 @@
                   <p class="en">With a reason</p>
                   <h2><span>이유</span>가 있는 <span>코드</span>를<br>작성하겠습니다.</h2>
                </div>
-            </li>
+            </li> -->
          </ul>
       </section>
       <section class="about">
@@ -158,7 +158,7 @@
                   <p class="date"><span class="lnr lnr-calendar-full"></span>2021.11.29-2021.12.05</p>
                </div> -->
             </a></li>
-            <li><a href="https://github.com/umingming/DeepRoot"><p class="img"><img src="img/project3.png" alt="뿌리깊은국사"></p>
+            <li><a href="#"><p class="img"><img src="img/project3.png" alt="뿌리깊은국사"></p>
                <!-- <div class="content">
                   <p class="color">뿌리 깊은 국사</p>
                   <p> 자바 콘솔로 구현한 한국사 학습 프로그램</p>
