Update skill layout

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                   <!-- <h2><span>시도</span>를 <span>성공</span>으로<br>이끌겠습니다.</h2> -->
                </div>
             </li>
-            <!-- <li>
+            <li>
                <img src="img/main2.jpg" alt="메인2">
                <div class="txt">
                   <p class="en">untiring effort</p>
@@ -55,7 +55,7 @@
                   <p class="en">With a reason</p>
                   <h2><span>이유</span>가 있는 <span>코드</span>를<br>작성하겠습니다.</h2>
                </div>
-            </li> -->
+            </li>
          </ul>
       </section>
       <section class="about">
@@ -93,14 +93,17 @@
             <h2>MY SKILLS</h2>
          </div>
          <ul class="skills">
+            <!-- <li id="java" class="animate" data-animate="fadeInLeft" data-duration="1s" data-delay="0.0s"> -->
             <li id="java">
-               <h3>Java</h3>
+               <p><img src="img/logoJava.png" alt=""></p>
+               <h3 >Java</h3>
                <div>
                   <!-- <p>80%</p> -->
-                  <p>Java로 기본적인 알고리즘 구현이 가능합니다. 객체 지향 프로그래밍을 이해하고 있으며 프로그램에서 필요한 클래스를 설계할 수 있습니다. 프로젝트에서 컬렉션을 이용해 코드 관리를 한 경험이 있습니다. </p>
+                  <p>Java로 기본적인 알고리즘 구현이 가능합니다. 객체 지향 프로그래밍을 이해하고 있으며 프로그램에서 필요한 클래스를 설계할 수 있습니다.</p>
                </div>
             </li>
             <li id="sql">
+               <p><img src="img/logoSql.png" alt=""></p>
                <h3>SQL</h3>
                <div>
                   <!-- <p>60%</p> -->
@@ -108,6 +111,7 @@
                </div>
             </li>
             <li id="html">
+               <p><img src="img/logoHtml.png" alt=""></p>
                <h3>HTML5</h3>
                <div>
                   <!-- <p>70%</p> -->
@@ -115,6 +119,7 @@
                </div>
             </li>
             <li id="css">
+               <p><img src="img/logoCss.png" alt=""></p>
                <h3>CSS3</h3>
                <div>
                   <!-- <p>50%</p> -->
@@ -122,6 +127,7 @@
                </div>
             </li>
             <li id="javaScript">
+               <p><img src="img/logoJs.png" alt=""></p>
                <h3>JavaScript</h3>
                <div>
                   <!-- <p>40%</p> -->
@@ -129,6 +135,7 @@
                </div>
             </li>
             <li id="github">
+               <p><img src="img/logoGithub.png" alt=""></p>
                <h3>GitHub</h3>
                <div>
                   <!-- <p>70%</p> -->
