Update contact color

--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
             </a></li>
          </ul>
       </section>
-      <section class="contact animate" data-animate="fadeInDown" data-duration="1s" data-delay="-0.2@s">
+      <section class="contact animate" data-animate="fadeInDown" data-duration="1s" data-delay="-0.2s">
          <a id="contact"></a>
          <div class="title">
             <h2>CONTACT ME</h2>
