Update Project opacity

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
          <div class="innerHeader">
             <h1 class="logo"><a href="index.html">
                <img src="img/logo1.png" alt="로고1">
-               <img src="img/logo2.png" alt="로고2">
+               <!-- <img src="img/logo2.png" alt="로고2"> -->
             </a></h1>
             <ul class="menu en">
                <li id="btnHome"><a href="#">HOME</a></li>
@@ -87,62 +87,64 @@
             </li>
          </ul>
       </section>
-      <section class="skill animate" data-animate="fadeInUp" data-duration="1s" data-delay="-0.5s">
+      <section class="skill">
          <a id="skill"></a>
-         <div class="title">
+         <div class="title animate" data-animate="fadeInDown" data-duration="1s" data-delay="0s">
             <h2>MY SKILLS</h2>
          </div>
-         <ul class="skills">
-            <!-- <li id="java" class="animate" data-animate="fadeInLeft" data-duration="1s" data-delay="0.0s"> -->
-            <li id="java">
-               <p><img src="img/logoJava.png" alt=""></p>
-               <h3 >Java</h3>
-               <div>
-                  <!-- <p>80%</p> -->
-                  <p>Java로 기본적인 알고리즘 구현이 가능합니다. 객체 지향 프로그래밍을 이해하고 있으며 프로그램에서 필요한 클래스를 설계할 수 있습니다.</p>
-               </div>
-            </li>
-            <li id="sql">
-               <p><img src="img/logoSql.png" alt=""></p>
-               <h3>SQL</h3>
-               <div>
-                  <!-- <p>60%</p> -->
-                  <p>오라클로 관계형 데이터베이스를 관리할 수 있습니다. SQLD를 취득하여 데이터 모델링과 SQL 기본 이론을 숙지했습니다.</p>
-               </div>
-            </li>
-            <li id="html">
-               <p><img src="img/logoHtml.png" alt=""></p>
-               <h3>HTML5</h3>
-               <div>
-                  <!-- <p>70%</p> -->
-                  <p>HTML5로 웹페이지 레이아웃을 제작한 경험이 있습니다. Inline과 Block 속성을 이해하고 알맞게 태그를 적용할 수 있습니다.</p>
-               </div>
-            </li>
-            <li id="css">
-               <p><img src="img/logoCss.png" alt=""></p>
-               <h3>CSS3</h3>
-               <div>
-                  <!-- <p>50%</p> -->
-                  <p>다양한 CSS3의 속성을 이해하여 레이아웃 디자인을 적용합니다. 해상도에 따른 반응형 웹페이지를 제작할 수 있습니다.</p>
-               </div>
-            </li>
-            <li id="javaScript">
-               <p><img src="img/logoJs.png" alt=""></p>
-               <h3>JavaScript</h3>
-               <div>
-                  <!-- <p>40%</p> -->
-                  <p>실제 웹페이지를 똑같이 구현하며 JavaScript 기본 문법을 공부하고 있습니다. 간단한 jquery를 사용할 수 있습니다. </p>
-               </div>
-            </li>
-            <li id="github">
-               <p><img src="img/logoGithub.png" alt=""></p>
-               <h3>GitHub</h3>
-               <div>
-                  <!-- <p>70%</p> -->
-                  <p>형상 관리의 중요성에 대해 인지하고 있으며 GitHub을 이용해 협업을 진행한 경험이 있습니다. GitHub 서버로 웹페이지를 제작할 수 있습니다.</p>
-               </div>
-            </li>
-         </ul>
+         <div class="content">
+            <ul class="skills">
+               <!-- <li id="java" class="animate" data-animate="fadeInLeft" data-duration="1s" data-delay="0.0s"> -->
+               <li id="java">
+                  <p><img src="img/logoJava.png" alt=""></p>
+                  <h3 >Java</h3>
+                  <div>
+                     <!-- <p>80%</p> -->
+                     <p>Java로 기본적인 알고리즘 구현이 가능합니다. 객체 지향 프로그래밍을 이해하고 있으며 프로그램에서 필요한 클래스를 설계할 수 있습니다.</p>
+                  </div>
+               </li>
+               <li id="sql">
+                  <p><img src="img/logoSql.png" alt=""></p>
+                  <h3>SQL</h3>
+                  <div>
+                     <!-- <p>60%</p> -->
+                     <p>오라클로 관계형 데이터베이스를 관리할 수 있습니다. SQLD를 취득하여 데이터 모델링과 SQL 기본 이론을 숙지했습니다.</p>
+                  </div>
+               </li>
+               <li id="html">
+                  <p><img src="img/logoHtml.png" alt=""></p>
+                  <h3>HTML5</h3>
+                  <div>
+                     <!-- <p>70%</p> -->
+                     <p>HTML5로 웹페이지 레이아웃을 제작한 경험이 있습니다. Inline과 Block 속성을 이해하고 알맞게 태그를 적용할 수 있습니다.</p>
+                  </div>
+               </li>
+               <li id="css">
+                  <p><img src="img/logoCss.png" alt=""></p>
+                  <h3>CSS3</h3>
+                  <div>
+                     <!-- <p>50%</p> -->
+                     <p>다양한 CSS3의 속성을 이해하여 레이아웃 디자인을 적용합니다. 해상도에 따른 반응형 웹페이지를 제작할 수 있습니다.</p>
+                  </div>
+               </li>
+               <li id="javaScript">
+                  <p><img src="img/logoJs.png" alt=""></p>
+                  <h3>JavaScript</h3>
+                  <div>
+                     <!-- <p>40%</p> -->
+                     <p>실제 웹페이지를 똑같이 구현하며 JavaScript 기본 문법을 공부하고 있습니다. 간단한 jquery를 사용할 수 있습니다. </p>
+                  </div>
+               </li>
+               <li id="github">
+                  <p><img src="img/logoGithub.png" alt=""></p>
+                  <h3>GitHub</h3>
+                  <div>
+                     <!-- <p>70%</p> -->
+                     <p>형상 관리의 중요성에 대해 인지하고 있으며 GitHub을 이용해 협업을 진행한 경험이 있습니다. GitHub 서버로 웹페이지를 제작할 수 있습니다.</p>
+                  </div>
+               </li>
+            </ul>
+         </div>
       </section>
       <section class="project">
          <a id="project"></a>
@@ -151,6 +153,7 @@
             <!-- <p>이미지를 누르면 프로젝트 설명으로 이동합니다.</p> -->
          </div>
          <ul class="projectSlide">
+         <!-- <ul class="projectSlide animate" data-animate="fadeInRight" data-duration="2s" data-delay="-1s"> -->
             <li><a href="https://github.com/umingming/DragonLand"><p class="img"><img src="img/project1.png" alt="용용랜드"></p>
                <!-- <div class="content">
                   <p class="color">용용랜드</p>
@@ -180,7 +183,7 @@
             </a></li>
          </ul>
       </section>
-      <section class="contact animate" data-animate="fadeInDown" data-duration="1s" data-delay="-0.2s">
+      <section class="contact animate" data-animate="fadeInUp" data-duration="1s" data-delay="0s">
          <a id="contact"></a>
          <div class="title">
             <h2>CONTACT ME</h2>
