--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
    <div class="wrap">
       <header>
          <div class="innerHeader">
-            <h1 class="logo"><a href="index.html">
+            <h1 class="logo"><a href="#!">
                <img src="img/logo1.png" alt="로고1">
-               <!-- <img src="img/logo2.png" alt="로고2"> -->
+               <img src="img/logo2.png" alt="로고2">
             </a></h1>
             <ul class="menu en">
                <li id="btnHome"><a href="#">HOME</a></li>
@@ -189,8 +189,8 @@
             <h2>CONTACT ME</h2>
          </div>
          <ul>
-            <li><span class="lnr lnr-phone-handset"></span>010-5514-4506</p></li>
-            <li><span class="lnr lnr-envelope"></span>u_0112@naver.com</p></li>
+            <li><span class="lnr lnr-phone-handset"></span><p>010-5514-4506</p></li>
+            <li><span class="lnr lnr-envelope"></span><p>u_0112@naver.com</p></li>
          </ul>
       </section>
       <footer>
