--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                <img src="img/main0_scroll.jpg" alt="메인1">
                <p id="btnScroll"><img src="img/scroll.png" alt="메인1"></p>
                <div class="txt">
-                  <p class="en">Web Developer</p>
+                  <p class="en">Developer</p>
                   <h2>안녕하세요,<br> <span>이유미</span>입니다!</h2>
                   <!-- <h2><span>시도</span>를 <span>성공</span>으로<br>이끌겠습니다.</h2> -->
                </div>
@@ -64,20 +64,25 @@
             <h2>ABOUT ME</h2>
          </div>
          <ul>
-            <li>
+            <!-- <li>
                <div class="img">
-                  <img src="img/projectTemp.png" alt="">
+                  <img src="img/about1.JPG" alt="유미">
                </div>
                <div class="txt">
+                  &nbsp;안녕하세요, 이유미입니다!
+                  <br>&nbsp;저는 등산, 실내 클라이밍 그리고 개발을 좋아합니다. 분명한 목표와 큰 성취감이 이들의 공통점입니다.
+                  <br>&nbsp;초보 개발자라 모든 배움이 새롭고 설렙니다. 요즘은 상상을 현실로 이끄는 알고리즘 구현에 흥미가 동해 열심히 공부하고 있습니다. 
                </div>
             </li>
             <li>
                <div class="img">
-                  <img src="img/projectTemp.png" alt="">
+                  <img src="img/about2.JPG" alt="">
                </div>
                <div class="txt">
+                  &nbsp;중학교때부터 지금까지, 12년 동안 일정표를 작성할 정도로 저의 강점은 꾸준함입니다.
+                  <br>&nbsp;개발 공부를 시작한 이후 하루도 빠짐 없이 학습 내용을 노션에 기록하고 있는데요. 이런 시간과 노력이 쌓여 개발자로서 불변의 가치를 만들어줄 거라 믿습니다.
                </div>
-            </li>
+            </li> -->
             <li>
                <div class="img">
                   <img src="img/projectTemp.png" alt="">
