Update Skill section indentation

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                   <h3 >Java</h3>
                   <div>
                      <!-- <p>80%</p> -->
-                     <p>Java로 기본적인 알고리즘 구현이 가능합니다. 객체 지향 프로그래밍을 이해하고 있으며 프로그램에서 필요한 클래스를 설계할 수 있습니다.</p>
+                     <p>&nbsp;Java로 기본적인 알고리즘 구현이 가능합니다. 객체 지향 프로그래밍을 이해하고 있으며 프로그램에서 필요한 클래스를 설계할 수 있습니다.</p>
                   </div>
                </li>
                <li id="sql">
@@ -113,7 +113,7 @@
                   <h3>SQL</h3>
                   <div>
                      <!-- <p>60%</p> -->
-                     <p>오라클로 관계형 데이터베이스를 관리할 수 있습니다. SQLD를 취득하여 데이터 모델링과 SQL 기본 이론을 숙지했습니다.</p>
+                     <p>&nbsp;오라클로 관계형 데이터베이스를 관리할 수 있습니다. SQLD를 취득하여 데이터 모델링과 SQL 기본 이론을 숙지했습니다.</p>
                   </div>
                </li>
                <li id="html">
@@ -121,7 +121,7 @@
                   <h3>HTML5</h3>
                   <div>
                      <!-- <p>70%</p> -->
-                     <p>HTML5로 웹페이지 레이아웃을 제작한 경험이 있습니다. Inline과 Block 속성을 이해하고 알맞게 태그를 적용할 수 있습니다.</p>
+                     <p>&nbsp;HTML5로 웹페이지 레이아웃을 제작한 경험이 있습니다. Inline과 Block 속성을 이해하고 알맞게 태그를 적용할 수 있습니다.</p>
                   </div>
                </li>
                <li id="css">
@@ -129,7 +129,7 @@
                   <h3>CSS3</h3>
                   <div>
                      <!-- <p>50%</p> -->
-                     <p>다양한 CSS3의 속성을 이해하여 레이아웃 디자인을 적용합니다. 해상도에 따른 반응형 웹페이지를 제작할 수 있습니다.</p>
+                     <p>&nbsp;다양한 CSS3의 속성을 이해하여 레이아웃 디자인을 적용합니다. 해상도에 따른 반응형 웹페이지를 제작할 수 있습니다.</p>
                   </div>
                </li>
                <li id="javaScript">
@@ -137,7 +137,7 @@
                   <h3>JavaScript</h3>
                   <div>
                      <!-- <p>40%</p> -->
-                     <p>실제 웹페이지를 똑같이 구현하며 JavaScript 기본 문법을 공부하고 있습니다. 간단한 jquery를 사용할 수 있습니다. </p>
+                     <p>&nbsp;실제 웹페이지를 똑같이 구현하며 JavaScript 기본 문법을 공부하고 있습니다. 간단한 jquery를 사용할 수 있습니다. </p>
                   </div>
                </li>
                <li id="github">
@@ -145,7 +145,7 @@
                   <h3>GitHub</h3>
                   <div>
                      <!-- <p>70%</p> -->
-                     <p>형상 관리의 중요성에 대해 인지하고 있으며 GitHub을 이용해 협업을 진행한 경험이 있습니다. GitHub 서버로 웹페이지를 제작할 수 있습니다.</p>
+                     <p>&nbsp;형상 관리의 중요성에 대해 인지하고 있으며 GitHub을 이용해 협업을 진행한 경험이 있습니다. GitHub 서버로 웹페이지를 제작할 수 있습니다.</p>
                   </div>
                </li>
             </ul>
