--- a/index.html
+++ b/index.html
@@ -64,32 +64,32 @@
             <h2>ABOUT ME</h2>
          </div>
          <ul>
-            <!-- <li>
+            <li>
                <div class="img">
                   <img src="img/about1.JPG" alt="유미">
                </div>
                <div class="txt">
                   &nbsp;안녕하세요, 이유미입니다!
-                  <br>&nbsp;저는 등산, 실내 클라이밍 그리고 개발을 좋아합니다. 분명한 목표와 큰 성취감이 이들의 공통점입니다.
+                  <br>&nbsp;저는 등산, 클라이밍 그리고 개발을 좋아합니다. 분명한 목표와 큰 성취감이 이들의 공통점입니다.
                   <br>&nbsp;초보 개발자라 모든 배움이 새롭고 설렙니다. 요즘은 상상을 현실로 이끄는 알고리즘 구현에 흥미가 동해 열심히 공부하고 있습니다. 
                </div>
             </li>
-            <li>
+            <!-- <li>
                <div class="img">
                   <img src="img/about2.JPG" alt="">
                </div>
                <div class="txt">
-                  &nbsp;중학교때부터 지금까지, 12년 동안 일정표를 작성할 정도로 저의 강점은 꾸준함입니다.
-                  <br>&nbsp;개발 공부를 시작한 이후 하루도 빠짐 없이 학습 내용을 노션에 기록하고 있는데요. 이런 시간과 노력이 쌓여 개발자로서 불변의 가치를 만들어줄 거라 믿습니다.
+                  &nbsp;중학교때부터 지금까지, 11년 동안 일정표를 작성할 정도로 꾸준함은 제가 가진 큰 강점인데요.
+                  <br>&nbsp;개발 공부를 시작한 이후 하루도 빠짐 없이 학습 내용을 노션에 기록하고 있습니다. 이런 시간과 노력이 쌓여 개발자로서 불변의 가치를 만들어줄 거라 믿습니다.
                </div>
             </li> -->
-            <li>
+            <!-- <li>
                <div class="img">
                   <img src="img/projectTemp.png" alt="">
                </div>
                <div class="txt">
                </div>
-            </li>
+            </li> -->
          </ul>
       </section>
       <section class="skill">
@@ -182,7 +182,7 @@
             </a></li>
             <li><a href="https://github.com/umingming/Portfolio"><p class="img"><img src="img/project4.png" alt="포트폴리오"></p>
             </a></li>
-            <li><a href="#!"><p class="img"><img src="img/projectTemp.png" alt=""></p>
+            <li><a href="https://github.com/umingming/CloneCoding"><p class="img"><img src="img/project5.png" alt=""></p>
             </a></li>
             <li><a href="#"><p class="img"><img src="img/projectTemp.png" alt=""></p>
             </a></li>
