Update heart height

--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
       </section>
       <footer>
          <div class="innerFooter">
-            <p>© Copyright 2022. All right reserved</p>
+            <p>©2022 YouMe. All right reserved.</p>
          </div>
       </footer>
    </div>
