Update footer txt

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                   <h3>SQL</h3>
                   <div>
                      <!-- <p>60%</p> -->
-                     <p>&nbsp;오라클로 관계형 데이터베이스를 관리할 수 있습니다. SQLD를 취득하여 데이터 모델링과 SQL 기본 이론을 숙지했습니다.</p>
+                     <p>&nbsp;오라클로 관계형 데이터베이스를 설계할 수 있습니다. SQLD를 취득하여 데이터 모델링과 SQL 기본 이론을 숙지했습니다.</p>
                   </div>
                </li>
                <li id="html">
@@ -200,7 +200,7 @@
       </section>
       <footer>
          <div class="innerFooter">
-            <p>©2022 YouMe. All right reserved.</p>
+            <p>Copyright © 2022 YouMe. All rights reserved.</p>
          </div>
       </footer>
    </div>
