--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       </section>
       <section class="about">
          <a id="about"></a>
-         <div class="title">
+         <div class="title bubbles">
             <h2>ABOUT ME</h2>
          </div>
          <ul>
@@ -69,12 +69,12 @@
                   <img src="img/about1.JPG" alt="유미">
                </div>
                <div class="txt">
-                  <!-- &nbsp;안녕하세요, 이유미입니다!
+                  &nbsp;안녕하세요, 이유미입니다!
                   <br>&nbsp;저는 등산, 클라이밍 그리고 개발을 좋아합니다. 분명한 목표와 큰 성취감이 이들의 공통점입니다.
-                  <br>&nbsp;초보 개발자라 모든 배움이 새롭고 설렙니다. 요즘은 상상을 현실로 이끄는 알고리즘 구현에 흥미가 동해 열심히 공부하고 있습니다.  -->
+                  <br>&nbsp;초보 개발자라 모든 배움이 새롭고 설렙니다. 요즘은 상상을 현실로 이끄는 알고리즘 구현에 흥미가 동해 열심히 공부하고 있습니다.
                </div>
             </li>
-            <!-- <li>
+            <li>
                <div class="img">
                   <img src="img/about2.JPG" alt="">
                </div>
@@ -82,7 +82,7 @@
                   &nbsp;중학교때부터 지금까지, 11년 동안 일정표를 작성할 정도로 꾸준함은 제가 가진 큰 강점입니다.
                   <br>&nbsp;개발 공부를 시작한 이후 하루도 빠짐 없이 학습 내용을 노션에 기록하고 있습니다. 이런 시간과 노력이 쌓여 개발자로서 불변의 가치를 만들어줄 거라 믿습니다.
                </div>
-            </li> -->
+            </li> 
             <!-- <li>
                <div class="img">
                   <img src="img/projectTemp.png" alt="">
@@ -158,6 +158,10 @@
             <!-- <p>이미지를 누르면 프로젝트 설명으로 이동합니다.</p> -->
          </div>
          <ul class="projectSlide">
+            <li><a href="https://github.com/umingming/Goguma"><p class="img"><img src="img/project6.png" alt="포트폴리오"></p>
+            </a></li>
+            <li><a href="https://github.com/umingming/Portfolio"><p class="img"><img src="img/project4.png" alt="포트폴리오"></p>
+            </a></li>
          <!-- <ul class="projectSlide animate" data-animate="fadeInRight" data-duration="2s" data-delay="-1s"> -->
             <li><a href="https://github.com/umingming/DragonLand"><p class="img"><img src="img/project1.png" alt="용용랜드"></p>
                <!-- <div class="content">
@@ -180,11 +184,7 @@
                   <p class="date"><span class="lnr lnr-calendar-full"></span>2021.12.20-2021.12.31</p>
                </div> -->
             </a></li>
-            <li><a href="https://github.com/umingming/Portfolio"><p class="img"><img src="img/project4.png" alt="포트폴리오"></p>
-            </a></li>
             <li><a href="https://github.com/umingming/CloneCoding"><p class="img"><img src="img/project5.png" alt=""></p>
-            </a></li>
-            <li><a href="#"><p class="img"><img src="img/projectTemp.png" alt=""></p>
             </a></li>
          </ul>
       </section>
