--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       </section>
       <section class="about">
          <a id="about"></a>
-         <div class="title bubbles">
+         <div class="title">
             <h2>ABOUT ME</h2>
          </div>
          <ul>
