--- a/index.html
+++ b/index.html
@@ -60,27 +60,27 @@
       </section>
       <section class="about">
          <a id="about"></a>
-         <div class="title">
+         <div class="title bubbles">
             <h2>ABOUT ME</h2>
          </div>
          <ul>
             <li>
-               <div class="img">
+               <div class="img animate" data-animate="fadeInDown" data-duration="1.5s" data-delay="0s">
                   <img src="img/about1.JPG" alt="유미">
                </div>
-               <div class="txt">
-                  &nbsp;안녕하세요, 이유미입니다!
-                  <br>&nbsp;저는 등산, 클라이밍 그리고 개발을 좋아합니다. 분명한 목표와 큰 성취감이 이들의 공통점입니다.
-                  <br>&nbsp;초보 개발자라 모든 배움이 새롭고 설렙니다. 요즘은 상상을 현실로 이끄는 알고리즘 구현에 흥미가 동해 열심히 공부하고 있습니다.
+               <div class="txt animate" data-animate="fadeInLeft" data-duration="1s" data-delay="0s">
+                  &nbsp;&nbsp;안녕하세요, <b>이유미</b>입니다!
+                  <br>&nbsp;&nbsp;저는 등산, 클라이밍 그리고 <b>개발</b>을 좋아합니다. 분명한 목표와 큰 성취감이 이들의 공통점입니다.
+                  <br>&nbsp;&nbsp;초보 개발자라 모든 <b>배움</b>이 새롭고 설렙니다. 요즘은 상상을 현실로 이끄는 알고리즘 구현에 흥미가 동해 열심히 공부하고 있습니다.
                </div>
             </li>
             <li>
-               <div class="img">
+               <div class="img  animate" data-animate="fadeInUp" data-duration="1.5s" data-delay="-0.5s">
                   <img src="img/about2.JPG" alt="">
                </div>
-               <div class="txt">
-                  &nbsp;중학교때부터 지금까지, 11년 동안 일정표를 작성할 정도로 꾸준함은 제가 가진 큰 강점입니다.
-                  <br>&nbsp;개발 공부를 시작한 이후 하루도 빠짐 없이 학습 내용을 노션에 기록하고 있습니다. 이런 시간과 노력이 쌓여 개발자로서 불변의 가치를 만들어줄 거라 믿습니다.
+               <div class="txt  animate" data-animate="fadeInRight" data-duration="1s" data-delay="0s">
+                  &nbsp;&nbsp;중학교때부터 지금까지, <b>12년</b> 동안 일정표를 작성할 정도로 <b>꾸준함</b>은 제가 가진 큰 강점입니다.
+                  <br>&nbsp;&nbsp;개발 공부를 시작한 이후 하루도 빠짐 없이 학습 내용을 노션에 기록하고 있습니다. 이런 시간과 노력이 쌓여 개발자로서 <b>불변</b>의 가치를 만들어줄 거라 믿습니다.
                </div>
             </li> 
             <!-- <li>
