--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
    <script src="js/script.js"></script>
    <script src="js/slick.min.js"></script>
    <script src="js/scrolla.jquery.min.js"></script>
+   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
 </head>
 <body>
    <div class="wrap">
