Update Skill title efect

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
       </section>
       <section class="skill">
          <a id="skill"></a>
-         <div class="title animate" data-animate="fadeInDown" data-duration="1s" data-delay="0s">
+         <div class="title bubbles animate" data-animate="fadeInDown" data-duration="1s" data-delay="0s">
             <h2>MY SKILLS</h2>
          </div>
          <div class="content">
