--- a/index.html
+++ b/index.html
@@ -151,20 +151,20 @@
                      <p>&nbsp;형상 관리의 중요성에 대해 인지하고 있으며 GitHub을 이용해 협업을 진행한 경험이 있습니다. GitHub 서버로 웹페이지를 제작할 수 있습니다.</p>
                   </div>
                </li>
-               <li id="jsp">
-                  <p><img src="img/logoGithub.png" alt=""></p>
-                  <h3>JSP</h3>
-                  <div>
-                     <!-- <p>70%</p> -->
-                     <p>&nbsp;스클립틀릿과 익스프레션을 사용해 사이트를 구현할 수 있습니다. 데이터 요청과 전송에 대해 이해하고 있으며, 알맞은 메소드를 사용합니다.</p>
-                  </div>
-               </li>
                <li id="servlet">
-                  <p><img src="img/logoGithub.png" alt=""></p>
+                  <p><img src="img/logoSpring.png" alt=""></p>
                   <h3>Servlet</h3>
                   <div>
                      <!-- <p>70%</p> -->
                      <p>&nbsp;자바를 사용해 동적으로 웹 페이지를 만든 경험이 있습니다. 데이터베이스에서 필요한 데이터를 가져와 JSP에게 전달할 수 있습니다.</p>
+                  </div>
+               </li>
+               <li id="jsp">
+                  <p><img src="img/logoJsp.png" alt=""></p>
+                  <h3>JSP</h3>
+                  <div>
+                     <!-- <p>70%</p> -->
+                     <p>&nbsp;스클립틀릿과 익스프레션을 사용해 사이트를 구현할 수 있습니다. 데이터 요청과 전송에 대해 이해하고 있으며, 알맞은 메소드를 사용합니다.</p>
                   </div>
                </li>
             </ul>
