--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
                   <p class="date"><span class="lnr lnr-calendar-full"></span>2021.11.29-2021.12.05</p>
                </div> -->
             </a></li>
-            <li><a href="#"><p class="img"><img src="img/project3.png" alt="뿌리깊은국사"></p>
+            <li><a href="https://github.com/umingming/DeepRoot"><p class="img"><img src="img/project3.png" alt="뿌리깊은국사"></p>
                <!-- <div class="content">
                   <p class="color">뿌리 깊은 국사</p>
                   <p> 자바 콘솔로 구현한 한국사 학습 프로그램</p>
