--- a/index.html
+++ b/index.html
@@ -179,33 +179,35 @@
             <!-- <p>이미지를 누르면 프로젝트 설명으로 이동합니다.</p> -->
          </div>
          <ul class="projectSlide">
-            <li><a href="https://github.com/umingming/Goguma"><p class="img"><img src="img/project6.png" alt="포트폴리오"></p>
+            <!-- <li><a href="https://github.com/umingming/Goguma"><p class="img"><img src="img/project6.png" alt="포트폴리오"></p>
+            </a></li> -->
+            <li id="goguma"><a href="#!"><p class="img"><img src="img/project6.png" alt="포트폴리오"></p>
             </a></li>
-            <li><a href="https://github.com/umingming/Portfolio"><p class="img"><img src="img/project4.png" alt="포트폴리오"></p>
+            <li id="portfolio"><a href="#!"><p class="img"><img src="img/project4.png" alt="포트폴리오"></p>
             </a></li>
          <!-- <ul class="projectSlide animate" data-animate="fadeInRight" data-duration="2s" data-delay="-1s"> -->
-            <li><a href="https://github.com/umingming/DragonLand"><p class="img"><img src="img/project1.png" alt="용용랜드"></p>
+            <li id="dragonland"><a href="#!"><p class="img"><img src="img/project1.png" alt="용용랜드"></p>
                <!-- <div class="content">
                   <p class="color">용용랜드</p>
                   <p>JAVA 기반의 놀이공원 예매 및 관리 시스템</p>
                   <p class="date"><span class="lnr lnr-calendar-full"></span>2021.10.22-2021.11.02</p>
                </div> -->
             </a></li>
-            <li><a href="https://github.com/umingming/DragonCenter"><p class="img"><img src="img/project2.png" alt="교육센터"></p>
+            <li id="dragoncenter"><a href="#!"><p class="img"><img src="img/project2.png" alt="교육센터"></p>
                <!-- <div class="content">
                   <p class="color">쌍용 교육 센터</p>
                   <p>교육 센터 운영에 필요한 데이터베이스 구축</p>
                   <p class="date"><span class="lnr lnr-calendar-full"></span>2021.11.29-2021.12.05</p>
                </div> -->
             </a></li>
-            <li><a href="https://github.com/umingming/DeepRoot"><p class="img"><img src="img/project3.png" alt="뿌리깊은국사"></p>
+            <li id="deeproot"><a href="#!"><p class="img"><img src="img/project3.png" alt="뿌리깊은국사"></p>
                <!-- <div class="content">
                   <p class="color">뿌리 깊은 국사</p>
                   <p> 자바 콘솔로 구현한 한국사 학습 프로그램</p>
                   <p class="date"><span class="lnr lnr-calendar-full"></span>2021.12.20-2021.12.31</p>
                </div> -->
             </a></li>
-            <li><a href="https://github.com/umingming/CloneCoding"><p class="img"><img src="img/project5.png" alt=""></p>
+            <li id="clonecoding"><a href="#!"><p class="img"><img src="img/project5.png" alt=""></p>
             </a></li>
          </ul>
       </section>
