--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
                </div>
             </li>
          </ul>
+         <a class="hits" href="#!"><img src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https%3A%2F%2Fumingming.github.io%2FPortfolio%2F&count_bg=%23FF5492&title_bg=%23FF5492&icon=&icon_color=%23E7E7E7&title=%E2%9D%A4&edge_flat=false"/></a>
       </section>
       <section class="about">
          <a id="about"></a>
