--- a/index.html
+++ b/index.html
@@ -183,36 +183,36 @@
             <!-- <li><a href="https://github.com/umingming/Goguma"><p class="img"><img src="img/project6.png" alt="포트폴리오"></p>
             </a></li> -->
                <li id="goguma" class=" animate site" data-animate="fadeInLeft" data-duration="1.5s" data-delay="-0.5s"><a href="#!"><p class="img"><img src="img/project6.png" alt="포트폴리오"></p>
-                  <p class="title"><b>고구마켓</b></p>
                   <p class="content">Servlet과 JSP로 구현한 중고거래 웹 사이트</p>
-                  <i class="cursor site bi bi-cursor-fill"></i>
+                  <p class="title"><b>고구마켓</b></p>
+                  <i class="cursor site bi bi-cursor-fill"></i><p class="btn site">MORE</p>
                   <!-- <p class="date"><span class="lnr lnr-calendar-full"></span>2021.10.22-2021.11.02</p> -->
                </a></li>
                <!-- <ul class="projectSlide animate" data-animate="fadeInRight" data-duration="2s" data-delay="-1s"> -->
                <li id="dragonland" class="animate site" data-animate="fadeInDown" data-duration="1.5s" data-delay="-0.5s"><a href="#!"><p class="img"><img src="img/project1.png" alt="용용랜드"></p>
-                  <p class="title">용용랜드</p>
                   <p class="content">JAVA 기반의 놀이공원 예매 및 관리 시스템</p>
-                  <i class="cursor site bi bi-cursor-fill"></i>
+                  <p class="title">용용랜드</p>
+                  <i class="cursor site bi bi-cursor-fill"></i><p class="btn site">MORE</p>
                </a></li>
                <li id="dragoncenter" class="animate site" data-animate="fadeInRight" data-duration="2s" data-delay="-1s"><a href="#!"><p class="img"><img src="img/project2.png" alt="교육센터"></p>
-                  <p class="title">쌍용 교육 센터</p>
                   <p class="content">Oracle로 구현한 센터 운영 DB 구축</p>
-                  <i class="cursor site bi bi-cursor-fill"></i>
+                  <p class="title">쌍용 교육 센터</p>
+                  <i class="cursor site bi bi-cursor-fill"></i><p class="btn site">MORE</p>
                </a></li>
                <li id="portfolio" class="animate site" data-animate="fadeInLeft" data-duration="2s" data-delay="-1s"><a href="#!"><p class="img"><img src="img/project4.png" alt="포트폴리오"></p>
-                  <p class="title">포트폴리오</p>
                   <p class="content">HTML5로 제작한 Github page</p>
-                  <i class="cursor site bi bi-cursor-fill"></i>
+                  <p class="title">포트폴리오</p>
+                  <i class="cursor site bi bi-cursor-fill"></i><p class="btn site">MORE</p>
                </a></li>
                <li id="deeproot" class="animate site" data-animate="fadeInUp" data-duration="2s" data-delay="-1s"><a href="#!"><p class="img"><img src="img/project3.png" alt="뿌리깊은국사"></p>
-                  <p class="title">뿌리 깊은 국사</p>
                   <p class="content">자바 콘솔로 구현한 한국사 학습 프로그램</p>
-                  <i class="cursor site bi bi-cursor-fill"></i>
+                  <p class="title">뿌리 깊은 국사</p>
+                  <i class="cursor site bi bi-cursor-fill"></i><p class="btn site">MORE</p>
                </a></li>
                <li id="clonecoding"  class="animate site" data-animate="fadeInRight" data-duration="1.5s" data-delay="-0.5s"><a href="#!"><p class="img"><img src="img/project5.png" alt=""></p>
-                  <p class="title">클론 코딩 모음</p>
                   <p class="content">실제 기업의 메인 페이지를 HTML5로 구현</p>
-                  <i class="cursor site bi bi-cursor-fill"></i>
+                  <p class="title">클론 코딩 모음</p>
+                  <i class="cursor site bi bi-cursor-fill"></i><p class="btn site">MORE</p>
                </a></li>
             </ul>
          </section>
