--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
    <title>YOU+ME</title>
    <link rel="icon" href="img/contactImg.png">
    <link rel="stylesheet" href="css/style.css">
+   <link rel="stylesheet" href="css/style-reactive.css">
    <link rel="stylesheet" href="css/animate.min.css">
    <link rel="stylesheet" href="css/slick.css">
    <link rel="stylesheet" href="https://cdn.linearicons.com/free/1.0.0/icon-font.min.css">
