--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
             </a></h1>
             <ul class="menu en">
                <li id="btnHome"><a href="#">HOME</a></li>
-               <li id="btnAbout"><a href="#">ABOUT</a></li>
-               <li id="btnSkill"><a href="#">SKILLS</a></li>
-               <li id="btnProject"><a href="#">PROJECT</a></li>
-               <li id="btnContact"><a href="#">CONTACT</a></li>
+               <li id="btnAbout"><span class="lnr lnr-user"></span><a href="#">ABOUT</a></li>
+               <li id="btnSkill"><span class="lnr lnr-code"></span><a href="#">SKILLS</a></li>
+               <li id="btnProject"><span class="lnr lnr-screen"></span><a href="#">PROJECT</a></li>
+               <li id="btnContact"><span class="lnr lnr-phone-handset"></span><a href="#">CONTACT</a></li>
             </ul>
          </div>
       </header>
@@ -223,8 +223,8 @@
             <h2>CONTACT ME</h2>
          </div>
          <ul>
-            <li><span class="lnr lnr-phone-handset"></span><p>010-5514-4506</p></li>
-            <li><span class="lnr lnr-envelope"></span><p>u_0112@naver.com</p></li>
+            <li><span class="lnr lnr-phone-handset"></span><p><a href="tel:010-5514-4506">010-5514-4506</a></p></li>
+            <li><span class="lnr lnr-envelope"></span><p><a href="mailto:u_0112@naver.com">u_0112@naver.com</a></p></li>
          </ul>
       </section>
       <footer>
