--- a/index.html
+++ b/index.html
@@ -129,43 +129,47 @@
             <ul class="skills">
                <!-- <li id="java" class="animate" data-animate="fadeInLeft" data-duration="1s" data-delay="0.0s"> -->
                <li id="java">
-                  <p><img src="img/logoJava.png" alt=""></p>
-                  <h3 >Java</h3>
+                  <p><img src="img/logoJs.png" alt=""></p>
+                  <h3 >JavaScript</h3>
                   <div>
-                     <!-- <p>80%</p> -->
-                     <p>&nbsp;Java로 기본적인 알고리즘 구현이 가능합니다. 객체 지향 프로그래밍을 이해하고 있으며 프로그램에서 필요한 클래스를 설계할 수 있습니다.</p>
+                     <!-- <p>&nbsp;Java로 기본적인 알고리즘 구현이 가능합니다. 객체 지향 프로그래밍을 이해하고 있으며 프로그램에서 필요한 클래스를 설계할 수 있습니다.</p> -->
+                     <p>&nbsp;프로토타입과 클로저를 이해하고 있습니다. 반응형 웹 페이지를 제작할 수 있으며, HTML5, CSS3, ES6+ 문법을 알맞게 사용합니다.</p>
                   </div>
                </li>
                <li id="sql">
-                  <p><img src="img/logoSql.png" alt=""></p>
-                  <h3>SQL</h3>
+                  <p><img src="img/logoVue.png" alt=""></p>
+                  <h3>Vue.js</h3>
                   <div>
                      <!-- <p>60%</p> -->
-                     <p>&nbsp;오라클로 관계형 데이터베이스를 설계할 수 있습니다. SQLD를 취득하여 데이터 모델링과 SQL 기본 이론을 숙지했습니다.</p>
+                     <p>&nbsp;Vue2로 컴포넌트 기반의 서비스 개발을 경험했습니다. Rest API, Vuex, Router 등을 활용한 프로그래밍이 가능합니다.</p>
+                     <!-- <p>&nbsp;오라클로 관계형 데이터베이스를 설계할 수 있습니다. SQLD를 취득하여 데이터 모델링과 SQL 기본 이론을 숙지했습니다.</p> -->
                   </div>
                </li>
                <li id="html">
-                  <p><img src="img/logoHtml.png" alt=""></p>
-                  <h3>HTML5</h3>
+                  <p><img src="img/logoJava.png" alt=""></p>
+                  <h3>Java</h3>
                   <div>
                      <!-- <p>70%</p> -->
-                     <p>&nbsp;HTML5로 웹페이지 레이아웃을 제작한 경험이 있습니다. Inline과 Block 속성을 이해하고 알맞게 태그를 적용할 수 있습니다.</p>
+                     <p>&nbsp;Java로 기본적인 알고리즘 구현이 가능합니다. 객체 지향 프로그래밍을 이해하며 JPA, JDBC를 사용해 DB에 접근할 수 있습니다.</p>
+                     <!-- <p>&nbsp;HTML5로 웹페이지 레이아웃을 제작한 경험이 있습니다. Inline과 Block 속성을 이해하고 알맞게 태그를 적용할 수 있습니다.</p> -->
                   </div>
                </li>
                <li id="css">
-                  <p><img src="img/logoCss.png" alt=""></p>
-                  <h3>CSS3</h3>
+                  <p><img src="img/logoSharp.png" alt=""></p>
+                  <h3>C#</h3>
                   <div>
                      <!-- <p>50%</p> -->
-                     <p>&nbsp;다양한 CSS3의 속성을 이해하여 레이아웃 디자인을 적용합니다. 해상도에 따른 반응형 웹페이지를 제작할 수 있습니다.</p>
+                     <p>&nbsp;Windows Forms로 GUI 기반 클라이언트를 개발했습니다. 크로스 스레드를 학습하여 서버와 소켓 통신 구현이 가능합니다.</p>
+                     <!-- <p>&nbsp;다양한 CSS3의 속성을 이해하여 레이아웃 디자인을 적용합니다. 해상도에 따른 반응형 웹페이지를 제작할 수 있습니다.</p> -->
                   </div>
                </li>
                <li id="javaScript">
-                  <p><img src="img/logoJs.png" alt=""></p>
-                  <h3>JavaScript</h3>
+                  <p><img src="img/logoSql.png" alt=""></p>
+                  <h3>Oracle</h3>
                   <div>
                      <!-- <p>40%</p> -->
-                     <p>&nbsp;실제 웹페이지를 똑같이 구현하며 JavaScript 기본 문법을 공부하고 있습니다. 간단한 jquery를 사용할 수 있습니다. </p>
+                     <p>&nbsp;오라클로 관계형 데이터베이스를 설계할 수 있습니다. SQLD를 취득하여 데이터 모델링과 SQL 기본 이론을 숙지했습니다.</p>
+                     <!-- <p>&nbsp;실제 웹페이지를 똑같이 구현하며 JavaScript 기본 문법을 공부하고 있습니다. 간단한 jquery를 사용할 수 있습니다. </p> -->
                   </div>
                </li>
                <li id="github">
@@ -173,25 +177,24 @@
                   <h3>GitHub</h3>
                   <div>
                      <!-- <p>70%</p> -->
-                     <p>&nbsp;형상 관리의 중요성에 대해 인지하고 있으며 GitHub을 이용해 협업을 진행한 경험이 있습니다. GitHub 서버로 웹페이지를 제작할 수 있습니다.</p>
+                     <p>&nbsp;형상 관리의 중요성에 대해 인지하고 있으며 GitHub, GitLab을 이용해 협업을 진행한 경험이 있습니다. GitHub 서버로 웹페이지를 제작할 수 있습니다.</p>
                   </div>
                </li>
                <li id="servlet">
-                  <p><img src="img/logoSpring.png" alt=""></p>
-                  <h3>Servlet</h3>
+                  <p><img src="img/logoJira.png" alt=""></p>
+                  <h3>JIRA</h3>
                   <div>
                      <!-- <p>70%</p> -->
-                     <p>&nbsp;자바를 사용해 동적으로 웹 페이지를 만든 경험이 있습니다. 데이터베이스에서 필요한 데이터를 가져와 JSP에게 전달할 수 있습니다.</p>
+                     <p>&nbsp;Git, Confluence와 연동해 이슈를 관리합니다. Agile Process를 이해하며, Scrum 개발 경험이 있습니다.</p>
                   </div>
                </li>
-               <li id="jsp">
+               <!-- <li id="jsp">
                   <p><img src="img/logoJsp.png" alt=""></p>
                   <h3>JSP</h3>
                   <div>
-                     <!-- <p>70%</p> -->
                      <p>&nbsp;스클립틀릿과 익스프레션을 사용해 사이트를 구현할 수 있습니다. 데이터 요청과 전송에 대해 이해하고 있으며, 알맞은 메소드를 사용합니다.</p>
                   </div>
-               </li>
+               </li> -->
             </ul>
          </div>
       </section>
