--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>YOU+ME</title>
-   <!-- <link rel="icon" href="img/contactImg.png"> -->
-   <title>Test</title>
+   <link rel="icon" href="img/contactImg.png">
+   <!-- <title>Test</title> -->
    <link rel="stylesheet" href="css/style.css">
    <link rel="stylesheet" href="css/style-reactive.css">
    <link rel="stylesheet" href="css/animate.min.css">
