--- a/portfolio-vue/public/index.html
+++ b/portfolio-vue/public/index.html
@@ -4,10 +4,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <!-- <title>YOU+ME</title>
-    <link rel="icon" href="<%= BASE_URL %>logo.png"> -->
-    <title>semiFactoyModeler</title>
-    <link rel="icon" href="<%= BASE_URL %>semi-modeler.ico">
+    <title>YOU+ME</title>
+    <link rel="icon" href="<%= BASE_URL %>logo.png">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="https://cdn.linearicons.com/free/1.0.0/icon-font.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.1/font/bootstrap-icons.css">
