--- a/portfolio-vue/public/index.html
+++ b/portfolio-vue/public/index.html
@@ -7,6 +7,7 @@
     <title>YOU+ME</title>
     <link rel="icon" href="<%= BASE_URL %>logo.png">
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/style-reactive.css">
     <link rel="stylesheet" href="https://cdn.linearicons.com/free/1.0.0/icon-font.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.1/font/bootstrap-icons.css">
     <script src="https://kit.fontawesome.com/21de868323.js" crossorigin="anonymous"></script>
